Do you know your color values

--- a/CSS_advanced/styles/2-style.css
+++ b/CSS_advanced/styles/2-style.css
@@ -13,8 +13,8 @@ a{
     display: none;
 }
 .card-category{
-    color: #D73953
+    color: #D73953;
 }
 .sectiont-tagline{
-    color: #D73953
+    color: #D73953;
 }
