Variables for storing certain font types

--- a/CSS_advanced/styles/4-style.css
+++ b/CSS_advanced/styles/4-style.css
@@ -15,7 +15,7 @@ html{
 /* color for body*/
 body{ 
     color: #161616;
-    font: var(--font-family-base)
+    font: var(--font-family-base);
 }
 /*color for anchor elements */
 a{
