--- a/CSS_advanced/styles/4-style.css
+++ b/CSS_advanced/styles/4-style.css
@@ -14,7 +14,7 @@ html{
 }
 /* color for body*/
 body{ 
-    color: #161616;
+    color: var(--text-color); 
     font: var(--font-family-base);
 }
 /*color for anchor elements */
