--- a/CSS_advanced/styles/4-style.css
+++ b/CSS_advanced/styles/4-style.css
@@ -19,16 +19,16 @@ body{
 }
 /*color for anchor elements */
 a{
-    color: #161616;
+    color: var(--text-color);
 }   
 .visually-hidden{
     display: none;
 }
 .card-category{
-    color: #D73953;
+    color: var(--color-primary);
 }
 .section-tagline{
-    color: #D73953;
+    color: var(--color-primary);
 }
 h1, h2, h3, h4, h5, h6{
     font-family: var(--font-family-title);
