--- a/CSS_advanced/styles/9-style.css
+++ b/CSS_advanced/styles/9-style.css
@@ -35,7 +35,8 @@ body{
 /*color for anchor elements */
 a{
     color: #161616;
-    text-decoration: none;   
+    text-decoration: none;
+}      
 .visually-hidden{
     display: none;
 }
