--- a/CSS_advanced/styles/19-style.css
+++ b/CSS_advanced/styles/19-style.css
@@ -131,7 +131,7 @@ ul.row{
    padding: 0.5rem;
 }
 .footer-copywright{
-   margin: none;
+   margin: 0;
    font-size: var(--font-size-small);
    color: var(--text-color);
 }
