--- a/CSS_advanced/styles/23-style.css
+++ b/CSS_advanced/styles/23-style.css
@@ -213,6 +213,6 @@ ul.row{
 .social-link{
     display: block;
 }
-.social-link svg{
-    fill : var(--text-color);
+.social-link > svg{
+    fill: var(--text-color);
 }
