--- a/CSS_advanced/styles/29-style.css
+++ b/CSS_advanced/styles/29-style.css
@@ -55,7 +55,7 @@ details{display:block}summary{display:list-item}template{display:none}[hidden]{d
     --nav-item-letter-spacing: 0.04rem;
     --nav-item-display: inline-block;
     --nav-item-margin: 0 0 3rem 0;
-    --nav-item-link-hover: var(--color-primary);
+    --nav-item-link-hover: var(--color-white);
     /* buttons */
     --button-display: inline-block;
     --button-padding: 1.5rem 3rem;
@@ -312,5 +312,3 @@ ul.row{
    background: var(--color-black);
    --button-color: var(--color-white);
 }
-
-
